# mmnnrust

./: Cargo.toml  LICENSE  README.md  build.rs
src/: cli.rs  error.rs  main.rs  network.rs  neurons.rs
src/network/: error_function.rs  loss_function.rs
src/neurons/: activation.rs  neuron.rs
