[package]
name = "mmnn"
version = "0.1.3"
edition = "2021"
authors = ["Grgo Mariani <grgomariani@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "Micro Managed Neural Network"
readme = "README.md"
homepage = "https://github.com/GrgoMariani/mmnnrust"
repository = "https://github.com/GrgoMariani/mmnnrust"
keywords = ["cli", 
    "neuralnetwork",
    "backpropagation",
    "recursive",
    "neuron"
]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
ctrlc = "3.4.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
clap = { version = "4.5.35", features = ["derive"] }
clap_mangen = "0.2.26"

